# typecat

./: .SRCINFO  Cargo.toml  LICENSE  PKGBUILD  README.md  typecat
src/: event.rs  main.rs  mod.rs
