[package]
name = "typecat"
version = "0.1.0"
edition = "2018"
description="terminal typing test"
license="MIT"
authors = ["gosha"]
repository="https://github.com/pandaroses/typecat"
homepage="https://pndrs.codes"
keyword="pog"
category="Games"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui="0.16.0"
termion="1.5.6"
cargo-aur="1.4.1"